--- a/app/src/main/res/drawable/am_buttonshape_grey.xml
+++ b/app/src/main/res/drawable/am_buttonshape_grey.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:shape="rectangle"
-    tools:ignore="MissingDefaultResource">
+    android:shape="rectangle">
     <corners android:radius="10dp" />
     <solid android:color="@color/GrisBP" />
 
     <padding
-        android:bottom="0dp"
+        android:bottom="3dp"
         android:left="3dp"
-        android:right="0dp"
-        android:top="0dp" />
+        android:right="3dp"
+        android:top="3dp" />
 
     <size
         android:width="0dp"
