--- a/app/src/main/res/drawable/it_style_spinner.xml
+++ b/app/src/main/res/drawable/it_style_spinner.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:shape="rectangle"
-    tools:ignore="MissingDefaultResource">
+    android:shape="rectangle">
     <corners android:radius="10dp" />
-
-    <solid android:color="@color/BlancCible" />
     <padding
         android:bottom="3dp"
         android:left="3dp"
@@ -18,5 +14,10 @@
 
     <stroke
         android:width="1dp"
-        android:color="#878787" />
+        android:color="#878787"
+        android:drawSelectorOnTop="true"
+        android:isScrollContainer="true"
+        android:keepScreenOn="true"
+        android:spinnerMode="dropdown"
+        android:textAlignment="center" />
 </shape>
