--- a/app/src/main/res/layout-land-xhdpi/content_main.xml
+++ b/app/src/main/res/layout-land-xhdpi/content_main.xml
@@ -29,6 +29,8 @@
         android:layout_height="300dp"
         android:layout_weight="1"
         android:background="@drawable/ic_cible"
+        app:layout_collapseMode="parallax"
+        app:layout_scrollFlags="scroll|enterAlways"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/result"
