--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -31,6 +31,8 @@
         android:layout_marginBottom="20dp"
         android:layout_weight="1"
         android:background="@drawable/ic_cible"
+        app:layout_collapseMode="parallax"
+        app:layout_scrollFlags="scroll|enterAlways"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1"
