--- a/app/src/main/res/layout-land/activity_image_resultat.xml
+++ b/app/src/main/res/layout-land/activity_image_resultat.xml
@@ -10,7 +10,7 @@
     <TextView
         android:id="@+id/air_archer"
         android:layout_width="78dp"
-        android:layout_height="23dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="archer"
         android:textAlignment="viewStart"
@@ -25,7 +25,7 @@
     <TextView
         android:id="@+id/air_round"
         android:layout_width="160dp"
-        android:layout_height="39dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/roundName"
         android:textAlignment="viewStart"
@@ -60,9 +60,10 @@
 
     <LinearLayout
         android:id="@+id/air_layoutImage"
-        android:layout_width="400dp"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginTop="28dp"
+        app:layout_constraintDimensionRatio="1"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
