--- a/app/src/main/res/layout-land-xhdpi/content_main.xml
+++ b/app/src/main/res/layout-land-xhdpi/content_main.xml
@@ -11,12 +11,12 @@
         android:id="@+id/result"
         android:layout_width="128dp"
         android:layout_height="160dp"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="34dp"
         android:background="@drawable/it_style"
         android:ems="10"
         android:focusable="false"
         android:fontFamily="serif-monospace"
-        android:gravity="right|top"
+        android:gravity="end"
         android:inputType="textMultiLine"
         android:textSize="10sp"
         android:textStyle="bold"
@@ -25,14 +25,16 @@
 
     <ImageView
         android:id="@+id/imageCible"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_weight="1"
         android:background="@drawable/ic_cible"
-        app:layout_collapseMode="parallax"
         app:layout_scrollFlags="scroll|enterAlways"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1"
         app:layout_constraintStart_toEndOf="@+id/result"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.49" />
@@ -53,25 +55,26 @@
 
     <TextView
         android:id="@+id/ArrowValue"
-        android:layout_width="37dp"
-        android:layout_height="37dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textSize="50sp"
         android:layout_marginStart="80dp"
         android:layout_marginTop="80dp"
         android:text="Arrow"
         android:background="@drawable/am_arrow_style"
         android:gravity="center"
         android:textAlignment="center"
-        android:textSize="18sp"
+        app:layout_constraintDimensionRatio="1"
         android:textStyle="bold"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TableLayout
-        android:layout_width="120dp"
-        android:layout_height="333dp"
+        android:layout_width="126dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.894"
         app:layout_constraintStart_toEndOf="@+id/imageCible"
@@ -79,13 +82,14 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_weight="1">
+
             <Button
                 android:id="@+id/button10"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_yellow"
@@ -93,8 +97,8 @@
 
             <Button
                 android:id="@+id/button9"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_yellow"
@@ -103,13 +107,14 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_weight="1">
+
             <Button
                 android:id="@+id/button8"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_red"
@@ -117,8 +122,8 @@
 
             <Button
                 android:id="@+id/button7"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_red"
@@ -127,13 +132,14 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_weight="1">
+
             <Button
                 android:id="@+id/button6"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_blue"
@@ -141,8 +147,8 @@
 
             <Button
                 android:id="@+id/button5"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_blue"
@@ -151,13 +157,14 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_weight="1">
+
             <Button
                 android:id="@+id/button4"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_black"
@@ -166,8 +173,8 @@
 
             <Button
                 android:id="@+id/button3"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_black"
@@ -177,13 +184,14 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_weight="1">
+
             <Button
                 android:id="@+id/button2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_white"
@@ -192,8 +200,8 @@
 
             <Button
                 android:id="@+id/button1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_white"
@@ -203,13 +211,14 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_weight="1">
+
             <Button
                 android:id="@+id/Manque"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_grey"
@@ -218,8 +227,8 @@
 
             <Button
                 android:id="@+id/Annul"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_grey"
@@ -229,15 +238,16 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_weight="1">
+
             <Button
                 android:id="@+id/bPreviousArcher"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
-                android:background="@drawable/am_buttonshape_previous_archer"
                 android:layout_weight="1"
+                android:background="@drawable/am_buttonshape_previous_archer"
                 app:layout_constraintDimensionRatio="0,75" />
 
             <Button
@@ -245,21 +255,21 @@
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_rowWeight="1"
-                android:background="@drawable/am_buttonshape_next_archer"
                 android:layout_weight="1"
+                android:background="@drawable/am_buttonshape_next_archer"
                 app:layout_constraintDimensionRatio="0,75" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_weight="1">
 
             <TextView
                 android:id="@+id/endNumberT"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:text="@string/End"
@@ -268,8 +278,8 @@
 
             <TextView
                 android:id="@+id/endNumber"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:hint="End"
                 android:textSize="12sp"
