--- a/app/src/main/res/layout-land-xxhdpi/content_main.xml
+++ b/app/src/main/res/layout-land-xxhdpi/content_main.xml
@@ -11,12 +11,12 @@
         android:id="@+id/result"
         android:layout_width="166dp"
         android:layout_height="156dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="34dp"
         android:background="@drawable/it_style"
         android:ems="10"
         android:focusable="false"
         android:fontFamily="serif-monospace"
-        android:gravity="start|top"
+        android:gravity="end"
         android:inputType="textMultiLine"
         android:textSize="12sp"
         android:textStyle="bold"
@@ -31,7 +31,6 @@
         android:layout_marginBottom="20dp"
         android:layout_weight="1"
         android:background="@drawable/ic_cible"
-        app:layout_collapseMode="parallax"
         app:layout_scrollFlags="scroll|enterAlways"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -54,15 +53,16 @@
 
     <TextView
         android:id="@+id/ArrowValue"
-        android:layout_width="37dp"
-        android:layout_height="37dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textSize="50sp"
         android:layout_marginStart="80dp"
         android:layout_marginTop="80dp"
         android:text="Arrow"
         android:background="@drawable/am_arrow_style"
         android:gravity="center"
         android:textAlignment="center"
-        android:textSize="18sp"
+        app:layout_constraintDimensionRatio="1"
         android:textStyle="bold"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +70,7 @@
 
     <TableLayout
         android:layout_width="126dp"
-        android:layout_height="378dp"
+        android:layout_height="match_parent"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,14 +80,14 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_weight="1">
 
             <Button
                 android:id="@+id/button10"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_yellow"
@@ -95,8 +95,8 @@
 
             <Button
                 android:id="@+id/button9"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_yellow"
@@ -105,14 +105,14 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_weight="1">
 
             <Button
                 android:id="@+id/button8"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_red"
@@ -120,8 +120,8 @@
 
             <Button
                 android:id="@+id/button7"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_red"
@@ -130,14 +130,14 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_weight="1">
 
             <Button
                 android:id="@+id/button6"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_blue"
@@ -145,8 +145,8 @@
 
             <Button
                 android:id="@+id/button5"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_blue"
@@ -155,14 +155,14 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_weight="1">
 
             <Button
                 android:id="@+id/button4"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_black"
@@ -171,8 +171,8 @@
 
             <Button
                 android:id="@+id/button3"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_black"
@@ -182,14 +182,14 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_weight="1">
 
             <Button
                 android:id="@+id/button2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_white"
@@ -198,8 +198,8 @@
 
             <Button
                 android:id="@+id/button1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_white"
@@ -209,14 +209,14 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_weight="1">
 
             <Button
                 android:id="@+id/Manque"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_grey"
@@ -225,8 +225,8 @@
 
             <Button
                 android:id="@+id/Annul"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="@drawable/am_buttonshape_grey"
@@ -236,7 +236,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_weight="1">
 
@@ -260,14 +260,14 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_weight="1">
 
             <TextView
                 android:id="@+id/endNumberT"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:hint=" "
@@ -277,8 +277,8 @@
 
             <TextView
                 android:id="@+id/endNumber"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
                 android:hint="End"
                 android:textSize="12sp"
