--- a/app/src/main/res/layout-xhdpi/content_main.xml
+++ b/app/src/main/res/layout-xhdpi/content_main.xml
@@ -17,12 +17,12 @@
 
     <EditText
         android:id="@+id/result"
-        android:layout_width="180dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="183dp"
+        android:layout_height="91dp"
+        android:layout_marginTop="56dp"
         android:background="@drawable/it_style"
-        android:ems="10"
         android:focusable="false"
+        android:ems="10"
         android:fontFamily="serif-monospace"
         android:gravity="end"
         android:inputType="textMultiLine"
@@ -43,20 +43,46 @@
         android:textSize="24sp"
         android:textStyle="bold"
         android:visibility="invisible"
-        app:layout_constraintStart_toEndOf="@+id/result"
-        app:layout_constraintTop_toTopOf="@+id/result" />
+        app:layout_constraintLeft_toRightOf="@id/result"
+        app:layout_constraintTop_toTopOf="@id/result" />
 
     <Spinner
         android:id="@+id/archer"
-        android:layout_width="136dp"
-        android:layout_height="38dp"
-        android:gravity="center|center_horizontal|center_vertical"
+        android:layout_width="0dp"
+        android:layout_height="35dp"
         android:text="archer"
         android:textSize="14sp"
         android:background="@drawable/it_style"
         app:layout_constraintBottom_toTopOf="@id/endNumber"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/ArrowValue" />
+        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintStart_toEndOf="@id/ArrowValue"
+        app:layout_constraintTop_toTopOf="@id/ArrowValue"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/endNumber"
+        android:layout_width="179dp"
+        android:layout_height="23dp"
+        android:layout_marginEnd="8dp"
+        android:textAlignment="center"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/textEnd"
+        app:layout_constraintTop_toBottomOf="@id/archer"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="68dp" />
+
+    <TextView
+        android:id="@+id/textEnd"
+        android:layout_width="46dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="12dp"
+        android:text="@string/End"
+        app:layout_constraintStart_toEndOf="@+id/ArrowValue"
+        app:layout_constraintTop_toBottomOf="@id/archer" />
+
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -107,11 +133,11 @@
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1">
 
                 <Button
                     android:id="@+id/button10"
-                    style="@android:style/Widget.Button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
@@ -132,8 +158,8 @@
 
                 <Button
                     android:id="@+id/button8"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="@drawable/am_buttonshape_red"
@@ -141,8 +167,8 @@
 
                 <Button
                     android:id="@+id/button7"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="@drawable/am_buttonshape_red"
@@ -151,8 +177,8 @@
 
                 <Button
                     android:id="@+id/button6"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="@drawable/am_buttonshape_blue"
@@ -163,12 +189,13 @@
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1">
 
                 <Button
                     android:id="@+id/button5"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="@drawable/am_buttonshape_blue"
@@ -176,8 +203,8 @@
 
                 <Button
                     android:id="@+id/button4"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="@drawable/am_buttonshape_black"
@@ -186,8 +213,8 @@
 
                 <Button
                     android:id="@+id/button3"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="@drawable/am_buttonshape_black"
@@ -196,8 +223,8 @@
 
                 <Button
                     android:id="@+id/button2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="@drawable/am_buttonshape_white"
@@ -222,8 +249,8 @@
 
                 <Button
                     android:id="@+id/Manque"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="@drawable/am_buttonshape_grey"
@@ -231,8 +258,8 @@
 
                 <Button
                     android:id="@+id/Annul"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="@drawable/am_buttonshape_grey"
@@ -251,34 +278,16 @@
                     android:id="@+id/bNextArcher"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:background="@drawable/am_buttonshape_next_archer"
+                    android:top="0dp"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
-                    android:background="@drawable/am_buttonshape_next_archer" />
+                    app:layout_constraintDimensionRatio="1" />
 
             </TableRow>
         </TableLayout>
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/endNumber"
-        android:layout_width="116dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
-        android:textAlignment="center"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/archer"
-        app:layout_constraintTop_toBottomOf="@+id/archer" />
-
-    <TextView
-        android:id="@+id/end"
-        android:layout_width="49dp"
-        android:layout_height="19dp"
-        android:text="@string/End"
-        app:layout_constraintStart_toStartOf="@+id/archer"
-        app:layout_constraintTop_toTopOf="@+id/endNumber" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
