--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,25 +18,26 @@
 
     <EditText
         android:id="@+id/result"
+        android:autofillHints=" "
         android:layout_width="183dp"
         android:layout_height="91dp"
         android:layout_marginTop="56dp"
         android:background="@drawable/it_style"
         android:focusable="false"
         android:ems="10"
-        android:fontFamily="serif-monospace"
         android:gravity="end"
         android:inputType="textMultiLine"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
+        android:labelFor="@id/result"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/ArrowValue"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:layout_marginLeft="4dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/am_arrow_style"
         android:gravity="center"
@@ -51,8 +52,8 @@
         android:id="@+id/archer"
         android:layout_width="0dp"
         android:layout_height="35dp"
-        android:text="archer"
-        android:layout_marginLeft="4dp"
+        android:layout_marginStart="4dp"
+        android:text="@string/archer"
         android:textSize="14sp"
         android:background="@drawable/it_style"
         app:layout_constraintBottom_toTopOf="@id/endNumber"
