--- a/app/src/main/res/drawable/am_buttonshape_white.xml
+++ b/app/src/main/res/drawable/am_buttonshape_white.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:shape="rectangle"
-    tools:ignore="MissingDefaultResource">
+    android:shape="rectangle">
     <corners android:radius="10dp" />
-
     <solid android:color="@color/BlancCible" />
     <padding
         android:bottom="3dp"
