--- a/app/src/main/res/drawable/am_buttonshape_yellow.xml
+++ b/app/src/main/res/drawable/am_buttonshape_yellow.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:shape="rectangle"
-    tools:ignore="MissingDefaultResource">
+    android:shape="rectangle">
     <corners android:radius="10dp" />
     <solid android:color="@color/JauneCible" />
 
