--- a/app/src/main/res/layout-land/activity_maintenance.xml
+++ b/app/src/main/res/layout-land/activity_maintenance.xml
@@ -93,12 +93,12 @@
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="360dp"
         android:layout_height="53dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginTop="20dp"
         android:indeterminate="false"
         android:max="100"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/am_bexport_archer_rounds" />
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="@+id/am_bexport_archer_rounds"
+        app:layout_constraintTop_toBottomOf="@id/am_bexport_round_archer" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
